- Removed SQLite MFC runtime dependency
- source code cleanup (moved things to seperate folders)
- alternative webpage username/password reset (resetpwd file)
- implemented inverted blinds switch type
- when setting switch level = 0, the switch is turned Off now
- setting a switch level is now done by setting the level to 0=Off, 1..xx for the level

Version 1.0.7 (Januari 18th 2013)
- replaced all localtime function with localtime_r
- Dashboard: P1 Smart Meter Energy does not show the retour values if not used
- Devices Tab: Check if any device is selected to delete
- Support for MAC serial ports
- Error message when serial port get disconnected
- updated to RFCOM SDK version 6.01
- Dashboard now includes server date
- Barometer graph values now displays as whole number
- meter values now only inserted in meter table when there is a difference in value
- implemented utility graph 'last 24 hours usage'
- added jwsmtp class
- Option to transfer old device logs/settings to a new device (for example when the device battery is replaced and received a new ID)
- Youless Pulse Counter Meter hardware implemented
- Schedule item started message will now also report the timer type
- Clicking TopLeft (Domoticz) will show dashboard
- Hardware can now be Enabled/Disabled
- Lights/Switches, Contact status now displays as Open/Closed instead of On/Off
- Lights/Switches, Contact Open/Closed icon
- Temperature Custom Graph

Version 1.0.6 (Januari 9th 2013)
- RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
- P1 Smart Meter Serial hardware implemented
- P1 Smart Meter TCP hardware implemented
- Fixed: Temp, Hum, TempHumBaro ID
- option to add a manual LightwaveRF switch
- Chime light/switch status will now also trigger a notification
- Web Protection, option to ignore (local) networks
- Code should now compile also with VS2010 express
- Code now compiles also with Debian (Mac OS)